syntax = "proto3";
package pb;
option  go_package = "../pb";  // 声明生成的 go 文件所属的包

// 服务器类型
enum ClusterType {
    NONE = 0;
    GATE = 1;  // 网关,转发服务
    GAME = 2;  // game
};

// 状态
enum StatusType {
    REQUEST  = 0;  // 请求
    RESPONSE = 1;  // 应答
}

// 发送标志
enum SendType {
    PLAYER  = 0;  // 指定玩家
    NODE    = 1;  // 指定节点
    CLUSTER = 2;  // 集群所有节点
};

// 集群信息
message ClusterNode {
    ClusterType ClusterType = 1;
    string      Ip          = 2;
    int32       Port        = 3;
    uint32      ClusterID   = 4;
}

// 包头
message PacketHead {
    StatusType  Status         = 1;   // 状态
    SendType    SendType       = 2;   // 传输协议
    ClusterType SrcClusterType = 3;   // 源服务类型
    uint32      SrcClusterID   = 4;   // 源集群id
    ClusterType DstClusterType = 5;   // 目标集群类型
    uint32      DstClusterID   = 6;   // 目标集群id 大于0优先
    int32       ApiCode        = 7;   // 请求接口唯一id
    uint32      SeqID          = 8;   // 序列号
    int64       Time           = 9;   // 请求时间戳
    uint64      UID            = 10;  // 目标玩家uid
}

// 原始包
message Packet {
    PacketHead Head = 1;  // 包头
    bytes      Buff = 2;  // proto压缩数据
}

// 客户端包头
message RpcHead {
    int32  Code   = 1;  // 错误码 ErrorCode
    string ErrMsg = 2;  // 错误信息
}

// 服务之前调用包头（任意参数接口调用）
message ActorRequest {
    string ActorName = 1;
    string FuncName  = 2;
    bytes  Buff      = 3;
}

message ActorResponse {
    RpcHead Head = 1;
    bytes   Buff = 2;
}
